objects/cilium/allow-curl-pod.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-curl-nginx
spec:
  endpointSelector:
    matchLabels:
      run: nginx
  ingress:
    - fromEndpoints:
        - matchLabels:
            run: curl
