objects/cilium/deny-pod.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-traffic"
spec:
  endpointSelector: 
    matchLabels:
      run: curl
  ingress:
    - {}
  egress:
    - {}
