objects/cilium/deny.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-traffic"
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
