objects/cilium/egress-to-nginx.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-curl-to-nginx
spec:
  endpointSelector:
    matchLabels:
      run: curl
  egress:
  - toEndpoints:
    - matchLabels:
        run: nginx
