objects/cilium/entities-all.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-all-egress"
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - "all"
