objects/cilium/entities-world.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "restrict-egress-to-world"
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - "world"
