objects/cilium/ingressDeny.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-ingress"
spec:
  endpointSelector:
    matchLabels:
      app: server
  ingress:
  - fromEntities:
    - all
  ingressDeny:
  - fromEndpoints:
    - matchLabels:
        app: random-pod
